# NeuroMem

./: .gitignore  LICENSE  README.md  check_features.py  pyproject.toml  requirements.txt
neuromem/: __init__.py  async_client.py  cli.py  client.py  mcp_server.py
neuromem/compression/: __init__.py  compressor.py  models.py  reversible_store.py  router.py  summarizer.py
neuromem/core/: __init__.py  engine.py  exceptions.py  models.py
neuromem/providers/: __init__.py  base.py  ollama.py  openai.py  sentence_transformers.py
neuromem/storage/: __init__.py  base.py  chroma_vector.py  kuzu_graph.py
tests/: benchmark.py  conftest.py  test_client.py  test_client_coverage.py  test_compression.py  test_engine.py  test_engine_coverage.py  test_exceptions.py  test_guardrail_matching.py  test_models.py  test_providers.py  test_reinforcement.py  test_reversible_memory.py  test_router.py  test_stats.py  test_storage.py
