[tool.poetry]
name = "neuromem"
version = "0.1.0"
description = "Unified hybrid memory engine for AI agents — graph + vector cognitive state tracking over time"
license = "MIT"
authors = ["NeuroMem Contributors"]
readme = "README.md"
repository = "https://github.com/neuromem/neuromem"
keywords = ["ai-agents", "graph-database", "vector-database", "cognitive-memory", "kuzu", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
pydantic = ">=2.7, <3.0"
kuzu = "^0.7.0"
chromadb = ">=1.0.0, <2.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-timeout = "^2.3"
pytest-asyncio = "^0.23"
mypy = "^1.10"
ruff = "^0.5"
basedpyright = "^1.18"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = "^0.25" }

[tool.poetry.scripts]
neuromem = "neuromem.cli:_entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ──────────────────────────────────────────────
# Ruff (lint + format)
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["neuromem"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["B028", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["neuromem"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["loguru.logger.bind"]

# ──────────────────────────────────────────────
# mypy / basedpyright
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kuzu", "chromadb"]
ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["neuromem"]

# ──────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external DB)",
    "integration: Integration tests (require Kuzu + ChromaDB)",
    "slow: Explicitly slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:loguru:",
]

[tool.coverage.run]
source = ["neuromem"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
